Cagnol2025/20250527-224322[param_ring_disk.defaults]CombinationParamSearch{trial:[1]}/slurm_analysis-1675388.out
/home/cagnol/mozaik-models_github/mozaik-models/Cagnol2025/visualization_functions.py:794: SyntaxWarning: invalid escape sequence '\%'
  print('Removed \% of neurons:' + str(float(len(spike_ids1)-len(responsive_spike_ids1))/len(spike_ids1)))
/home/cagnol/mozaik-models_github/mozaik-models/Cagnol2025/visualization_functions.py:810: SyntaxWarning: invalid escape sequence '\%'
  print('Removed \% of neurons:' + str(float(len(spike_ids_inh1)-len(responsive_spike_ids_inh1))/len(spike_ids_inh1)))
/home/cagnol/mozaik-models_github/mozaik-models/Cagnol2025/visualization_functions.py:825: SyntaxWarning: invalid escape sequence '\%'
  print('Removed \% of neurons:' + str(float(len(spike_ids2)-len(responsive_spike_ids2))/len(spike_ids2)))
/home/cagnol/mozaik-models_github/mozaik-models/Cagnol2025/visualization_functions.py:839: SyntaxWarning: invalid escape sequence '\%'
  print('Removed \% of neurons:' + str(float(len(spike_ids_inh2)-len(responsive_spike_ids_inh2))/len(spike_ids_inh2)))
/home/cagnol/mozaik-models_github/mozaik-models/Cagnol2025/visualization_functions.py:879: SyntaxWarning: invalid escape sequence '\%'
  print('Removed \% of neurons:' + str(float(len(spike_ids1)-len(hc))/len(spike_ids1)))
/home/cagnol/mozaik-models_github/mozaik-models/Cagnol2025/visualization_functions.py:896: SyntaxWarning: invalid escape sequence '\%'
  print('Removed \% of neurons:' + str(float(len(spike_ids_inh1)-len(hc))/len(spike_ids_inh1)))
/home/cagnol/mozaik-models_github/mozaik-models/Cagnol2025/visualization_functions.py:913: SyntaxWarning: invalid escape sequence '\%'
  print('Removed \% of neurons:' + str(float(len(spike_ids2)-len(hc))/len(spike_ids2)))
/home/cagnol/mozaik-models_github/mozaik-models/Cagnol2025/visualization_functions.py:930: SyntaxWarning: invalid escape sequence '\%'
  print('Removed \% of neurons:'+  str(float(len(spike_ids_inh2)-len(hc))/len(spike_ids_inh2)))
/home/cagnol/mozaik-models_github/mozaik-models/Cagnol2025/visualization_functions.py:1680: SyntaxWarning: invalid escape sequence '\%'
  print('Removed \% of L4 neurons:' + str(float(len(self.parameters.l4_neurons)-len(selected_l4_neurons))/len(self.parameters.l4_neurons)))
/home/cagnol/mozaik-models_github/mozaik-models/Cagnol2025/visualization_functions.py:1703: SyntaxWarning: invalid escape sequence '\%'
  print('Removed \% of L4 neurons:' + str(float(len(self.parameters.l4_neurons)-len(selected_l4_neurons_hc))/len(self.parameters.l4_neurons)))
/home/cagnol/mozaik-models_github/mozaik-models/Cagnol2025/visualization_functions.py:1725: SyntaxWarning: invalid escape sequence '\%'
  print('Removed \% of L4 neurons:' + str(float(len(self.parameters.l4_neurons)-len(selected_l4_neurons))/len(self.parameters.l4_neurons)))
/home/cagnol/mozaik-models_github/mozaik-models/Cagnol2025/visualization_functions.py:1733: SyntaxWarning: invalid escape sequence '\%'
  print('Removed \% of L23 neurons:' + str(float(len(self.parameters.l23_neurons)-len(selected_l23_neurons))/len(self.parameters.l23_neurons)))
/home/cagnol/mozaik-models_github/mozaik-models/Cagnol2025/visualization_functions.py:1758: SyntaxWarning: invalid escape sequence '\%'
  print('Removed \% of L23 neurons:' + str(float(len(self.parameters.l23_neurons)-len(selected_l23_neurons_hc))/len(self.parameters.l23_neurons)))
/home/cagnol/mozaik-models_github/mozaik-models/Cagnol2025/visualization_functions.py:1780: SyntaxWarning: invalid escape sequence '\%'
  print('Removed \% of L2/3 neurons:' + str(float(len(self.parameters.l23_neurons)-len(selected_l23_neurons))/len(self.parameters.l23_neurons)))
Traceback (most recent call last):
  File "/home/cagnol/mozaik-models_github/mozaik-models/Cagnol2025/run_analysis.py", line 7, in <module>
    from analysis_and_visualization import perform_analysis_and_visualization, perform_analysis_and_visualization_stc, perform_analysis_and_visualization_spont, perform_analysis_and_visualization_ring_disk
  File "/home/cagnol/mozaik-models_github/mozaik-models/Cagnol2025/analysis_and_visualization.py", line 12, in <module>
    from visualization_functions import *
  File "/home/cagnol/mozaik-models_github/mozaik-models/Cagnol2025/visualization_functions.py", line 2509
    nli_simp_fr = param_filter_query(self.datastore,value_name = "sheet_name":'V1_Exc_L4', "stimulus_id":None, "value_name":'NLI F1 orientation 0(time)', ads_unique=True).get_analysis_result()[0].get_value_by_id(l4_s)
                                                                             ^
SyntaxError: invalid syntax
